changed route names, fixed thumbnail format bug
